il_admin/HW5/Fix_ubuntu_and_variables.json.example

--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,8 +1,7 @@
 {
+  "svc-key-file_var": "/Users/i.ryzhikov/otus/yc_cloud_service_key/key.json",
   "folder_id_var": "id-folder",
   "source_image_family_var": "ubuntu-1604-lts",
   "image_family": "ubuntu",
-  "subnet_id_var": "subnet-id",
-  "install_ruby_var": "scripts/install_ruby.sh",
-  "install_mongo_var": "scripts/install_mongodb.sh"
+  "subnet_id_var": "iiddvvaarr"
 }
