il_admin/HW9/fix_var_example

--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -3,5 +3,6 @@
   "folder_id_var": "id-folder",
   "source_image_family_var": "ubuntu-1604-lts",
   "image_family": "ubuntu",
+  "image_name": "reddit-db-base-db-app",
   "subnet_id_var": "iiddvvaarr"
 }
