il_admin/HW11/Add_ansible_roles_config

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -5,12 +5,13 @@ host_key_checking = False
 retry_files_enabled = False
 roles_path = ./roles
 vault_password_file = /Users/i.ryzhikov/otus/ansible-vault/vault.key
+interpreter_python  = /usr/bin/python3
 
-inventory = ./environments/stage/yc_compute.yml
-inventory_plugins = ./plugins/
+#inventory = ./environments/stage/yc_compute.yml
+#inventory_plugins = ./plugins/
 
-[inventory]
-enable_plugins = yc_compute
+#[inventory]
+#enable_plugins = yc_compute
 
 [diff]
 always = True
