--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -1,19 +1,27 @@
----
 - name: Deploy App
   hosts: app
+  become: true
+  vars:
+    deploy_user: ubuntu
+
   tasks:
+    - name: install git
+      apt:
+        name: git
+        state: present
+        update_cache: yes
 
     - name: Fetch the latest version of application code
       git:
         repo: 'https://github.com/express42/reddit.git'
-        dest: /home/ubuntu/reddit
+        dest: "/home/{{ deploy_user }}/reddit"
         version: monolith
       notify: restart puma
 
     - name: bundle install
       bundler:
         state: present
-        chdir: /home/ubuntu/reddit
+        chdir: "/home/{{ deploy_user }}/reddit"
 
   handlers:
   - name: restart puma
