--- a/ansible/roles/db/meta/main.yml
+++ b/ansible/roles/db/meta/main.yml
@@ -1,7 +1,9 @@
 galaxy_info:
-  author: your name
+  author: il_admin
   description: your role description
   company: your company (optional)
+  role_name: db
+  namespace: default
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
